Fix session time adjustment not visible on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
   background: linear-gradient(45deg, rgb(0,128,128), rgb(0, 0, 0)) no-repeat;
   background-size: contain;
-  width: 100%;
+  min-width: 100vw;
   min-height: 100vh;
   color: #FDFFFC;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .container {
   margin: 0 auto 0;
@@ -12,6 +13,7 @@ body {
   height: 100%;
 }
 #heading {
+  text-align: center;
   font-family: 'Lobster', cursive;
   font-size: 1em;
   font-weight: bold;
@@ -20,7 +22,7 @@ body {
   color: #fff;
 }
 
-h5 {
+.time-adjust-title {
    font-family: 'Open Sans Condensed', sans-serif;
 }
 
@@ -45,6 +47,7 @@ h5 {
   font-size: 32px;
   width: 40px;
   margin: 0 5px;
+  text-align: center;
 }
 
 button {
@@ -52,6 +55,9 @@ button {
   background: none;
   border: none;
   font-size: 48px;
+  padding: 0;
+  position: relative;
+  top: -5px;
 }
 button:active {
   text-shadow: 1px 1px 3px #ccc;
@@ -81,6 +87,7 @@ button:focus {
   max-width: 400px;
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 1rem;
 }
